# ivcap-service-sdk-python

./: .gitignore  .license.tmpl  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  LICENSE  Makefile  README.md  SKILLS.md  changelog.html  conduct.html  contributing.html  example.html  examples.tar  flake.nix  genindex.html  index.html  objects.inv  overview.html  py-modindex.html  pyproject.toml  pyrightconfig.json  search.html  searchindex.js
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  docs.yml
_modules/: index.html
_modules/ivcap_sdk_service/: aspect.html  itypes.html  ivcap.html  run.html  savers.html  service.html
_modules/ivcap_sdk_service/cio/: io_adapter.html  readable_file.html  readable_proxy.html  writable_file.html  writable_proxy.html
_sources/: example.ipynb.txt  index.md.txt
_sources/_templates/autoapi/: index.rst.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/ivcap_sdk_service/: index.rst.txt
_sources/autoapi/ivcap_sdk_service/aspect/: index.rst.txt
_sources/autoapi/ivcap_sdk_service/cio/: index.rst.txt
_sources/autoapi/ivcap_sdk_service/itypes/: index.rst.txt
_sources/autoapi/ivcap_sdk_service/ivcap/: index.rst.txt
_sources/autoapi/ivcap_sdk_service/logger/: index.rst.txt
_sources/autoapi/ivcap_sdk_service/run/: index.rst.txt
_sources/autoapi/ivcap_sdk_service/savers/: index.rst.txt
_sources/autoapi/ivcap_sdk_service/service/: index.rst.txt
_templates/autoapi/: index.html
api/events/: index.html
api/job-context/: index.html
api/service/: index.html
api/utilities/: index.html
autoapi/: index.html
autoapi/ivcap_sdk_service/: index.html
autoapi/ivcap_sdk_service/aspect/: index.html
autoapi/ivcap_sdk_service/cio/: index.html
autoapi/ivcap_sdk_service/cio/io_adapter/: index.html
autoapi/ivcap_sdk_service/cio/readable_file/: index.html
autoapi/ivcap_sdk_service/cio/readable_proxy/: index.html
autoapi/ivcap_sdk_service/cio/writable_file/: index.html
autoapi/ivcap_sdk_service/cio/writable_proxy/: index.html
autoapi/ivcap_sdk_service/itypes/: index.html
autoapi/ivcap_sdk_service/ivcap/: index.html
autoapi/ivcap_sdk_service/logger/: index.html
autoapi/ivcap_sdk_service/run/: index.html
autoapi/ivcap_sdk_service/savers/: index.html
autoapi/ivcap_sdk_service/service/: index.html
docs/: Makefile  conf.py  example.ipynb  index.md  mkdocs.yml  requirements.txt
docs-to-deploy/: 404.html  search.html  sitemap.xml
docs-to-deploy/api/overview/: index.html
docs-to-deploy/api/types/: index.html
docs-to-deploy/community/conduct/: index.html
docs-to-deploy/community/contributing/: index.html
docs-to-deploy/examples/advanced-patterns/: index.html
docs-to-deploy/getting-started/installation/: index.html
docs-to-deploy/getting-started/quick-start/: index.html
docs-to-deploy/guides/deployment/: index.html
docs-to-deploy/guides/error-handling/: index.html
docs-to-deploy/guides/service-composition/: index.html
docs-to-deploy/reference/glossary/: index.html
docs-to-deploy/reference/service-definition/: index.html
docs-to-deploy/search/: search_index.json
docs/docs/: index.md
docs/docs/api/: events.md  job-context.md  overview.md  service.md  types.md  utilities.md
docs/docs/community/: conduct.md  contributing.md
docs/docs/examples/: advanced-patterns.md  batch-service.md
docs/docs/getting-started/: first-service.md  installation.md  quick-start.md
docs/docs/guides/: artifacts.md  best-practices.md  deployment.md  error-handling.md  job-processing.md  observability.md  overview.md  service-composition.md
docs/docs/reference/: environment-variables.md  glossary.md  service-definition.md
examples/: sidecar.py
examples/batch-service/: index.html
examples/hello_world/: Makefile  hello_world.py
examples/load_artifacts/: Makefile  load_artifacts.py  requirements.txt
examples/primitive/: Dockerfile  Makefile  README.md  primitive.py  requirements.txt  service.py
examples/queue/: Makefile  README.md  task_queue.py
examples/secret/: Dockerfile  Makefile  requirements.txt  secret.py
examples/test-api/: Dockerfile  api_test_service.py  pyproject.toml
examples/test-api/tests/: get_artifact.json  load_artifact.json
examples/test-batch/: Dockerfile  Dockerfile.local  Makefile  Makefile.common  README.md  batch_service.py  pyproject.toml  requirements.txt  resources.json  service.bad.json  service.json
examples/test-batch/tests/: load_1.json  req_1.json  with_exception.json  with_exit_code.json  with_oom_error.json
examples/text_on_image/: Makefile  README.md  img_test_service.py
examples/text_on_image/DATA/: image.0.png-meta.json  image.1.png-meta.json  image.2.png-meta.json  image.3.png-meta.json  image.4.png-meta.json
getting-started/first-service/: index.html
guides/artifacts/: index.html
guides/best-practices/: index.html
guides/job-processing/: index.html
guides/observability/: index.html
guides/overview/: index.html
ivcap_service/: __init__.py  context.py  events.py  ivcap.py  logger.py  logging.json  openobserve.py  secret.py  service.py  service_definition.py  testing.py  tool_definition.py  types.py  utils.py  version.py
reference/environment-variables/: index.html
scripts/: check_tag.py  test-docs-build.sh
src/ivcap_sdk_service/: __init__.py  ai_tool.py  aspect.py  config.py  function.py  itypes.py  ivcap.py  logger.py  run.py  savers.py  service.py  utils.py  verifiers.py  workflow.py
src/ivcap_sdk_service/cio/: __init__.py  cache.py  io_adapter.py  ivcap_io_adapter.py  local_io_adapter.py  readable_file.py  readable_proxy.py  utils.py  writable_file.py  writable_proxy.py
src/ivcap_service/: __init__.py  ivcap.py  logger.py  logging.json  service.py  service_definition.py  testing.py  tool_definition.py  types.py  utils.py  version.py
tests/: dummy.py  test_config.py  test_events.py  test_events_otel.py  test_openobserve.py  test_otel_exclusions.py  test_secret.py  test_types.py  test_utils.py
tests/ivcap_sdk_service/: test_service.py
(+5 files in other folders)
