[tool.poetry]
name = "ivcap_service"
version = "0.3.0"
description = "SDK library for building services for the IVCAP platform"

authors = ["Max Ott <max.ott@csiro.au>"]

readme = "README.md"

include = ["src/ivcap_service/py.typed"]

[tool.poetry.dependencies]
python = ">=3.8"
uuid6 = "2024.7.10"
cachetools = "^5.5.2"
opentelemetry-distro = "^0.51b0"
opentelemetry-exporter-otlp = "^1.30.0"
opentelemetry-instrumentation-fastapi = "^0.51b0"
opentelemetry-instrumentation-requests = "^0.51b0"
opentelemetry-instrumentation-httpx = "^0.51b0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
fastapi = { version = "^0.111.1", extras = ["standard"] }
pytest = "^7.1.3"
pytest-cov = "^4.1.0"
Sphinx = "^5.2.3"
# myst-nb = "^1.2.0"
autoapi = "^2.0.1"
sphinx-autoapi = "^2.0.0"
sphinx-rtd-theme = "^1.0.0"
licenseheaders = "^0.8.8"

[tool.semantic_release]
version_variable = "pyproject.toml:version" # version location
branch = "main"                             # branch to make releases of
build_command = "poetry build"              # build dists
dist_path = "dist/"                         # where to put dists
upload_to_release = true                    # auto-create GitHub release
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
patch_without_tag = true                    # patch release by default

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
